--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,26 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
 body {
 	margin: 0;
 	padding: 0;
-	background: #eee;
+	background: #000;
 }
 
-canvas {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);    
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  cursor: pointer;
+// canvas {
+//   position: absolute;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);    
+//   -webkit-transform: translate(-50%, -50%);
+//   -moz-transform: translate(-50%, -50%);
+//   -ms-transform: translate(-50%, -50%);
+//   cursor: pointer;
+// }
+
+#map-container {
+	width: 100%;
+	height: 100%;
+	background: #000 !important;
 }
