--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,10 @@ body {
 	height: 100%;
 	background: #000 !important;
 }
+
+#map-container.flipped {
+  transform: rotate(180deg) !important;    
+  -webkit-transform: rotate(180deg) !important;
+  -moz-transform: rotate(180deg) !important;
+  -ms-transform: rotate(180deg) !important;
+}
