--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,26 @@ body {
 	background: #000 !important;
 }
 
-#map-container.flipped {
+
+/* google logo */
+#map-container.flipped .gm-style > div:nth-child(2){
   transform: rotate(180deg) !important;    
   -webkit-transform: rotate(180deg) !important;
   -moz-transform: rotate(180deg) !important;
   -ms-transform: rotate(180deg) !important;
+  top: 0px !important;
+  bottom: auto !important;
+  right: 0px !important;
+  left: auto !important;
+}
+
+#map-container.flipped  .gm-style-cc, #map-container.flipped .gmnoprint {
+  transform: rotate(180deg) !important;    
+  -webkit-transform: rotate(180deg) !important;
+  -moz-transform: rotate(180deg) !important;
+  -ms-transform: rotate(180deg) !important;
+  top: 0px !important;
+  bottom: auto !important;
+  left: 0px !important;
+  right: auto !important;
 }
